# physical-AI-Homanoid-Book

./: .claude.json  .dockerignore  .gitignore  .npmignore  CI-CD-ANALYSIS.md  CLAUDE.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_PROCESS.md  DEPLOYMENT_STEPS.md  DOCKER_DEPLOYMENT.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_README.md  Dockerfile  Dockerfile.hf  FINAL_STATUS_REPORT.md  HF_DEPLOYMENT.md  HF_DEPLOYMENT_READY.md  HF_DEPLOYMENT_SOLUTION.md  HF_SPACES_DEPLOYMENT.md  HF_STATUS.md  MERGE_REPORT.md  MULTILINGUAL_SETUP.md  PUSH_TO_GITHUB.md  README-HF-SPACE.md  README.md  README_COMPLETE.md  TEST_REPORT.md  TRANSLATION_FIX.md  TRANSLATION_GUIDE.md  app.py  create_hf_space.sh  deploy-to-hf.sh  deploy_hf.py  deploy_hf.sh  deploy_now.sh  docker-compose-production.yml  docker-compose.hf.yml  docker-compose.prod.yml  docker-compose.yml  main.py  (+10 more)
.claude/agents/: qdrant-rag-responder.md
.claude/skill_creator/: skills.md
.github/: CICD-SETUP.md  IMPLEMENTATION_REPORT.txt  SETUP_COMPLETE.md
.github/workflows/: README.md  build.yml  deploy.yml  docker-deploy.yml  documentation.yml  main.yml  quality.yml
.specify/memory/: constitution.md
Humainoid-robotics/: Dockerfile  README.md  app.py  app_fastapi.py  backend.py  requirements.txt  start.sh
Humainoid-robotics/.streamlit/: config.toml
Humainoid-robotics/kubernetes/: deploy.sh  deployment.yaml  (+2 more)
backend/: AGENT_CONFIG_FIX.md  DEPLOYMENT.md  Dockerfile  agent.py  agent_config_loader.py  check_and_ingest.py  general_agent_impl.py  ingest_docs.py  main.py  pyproject.toml  requirements.txt  reteriving.py  test_chat.py  test_general_agent.py  test_qdrant_connection.py
backend/.claude/skills/: README.md  config.md  rag-manager.md  rag-retriever.md  setup-guide.md
backend/.claude/skills/agents/: general-agent.yaml  indexer-agent.yaml
backend/src/: main.py
backend/src/api/routers/: __init__.py  chat.py  devices.py  i18n.py  personalization.py  safety.py  text_processing.py  translations.py
backend/src/clients/: __init__.py  chat_provider.py  cohere_client.py  embeddings.py  gemini_client.py  gemini_embedding_client.py  openai_client.py  openrouter_client.py  qdrant_client.py
backend/src/config/: database.py  settings.py  translations.py
backend/src/database/: __init__.py
backend/src/devices/: communication.py  ros_interface.py
backend/src/models/: __init__.py  bookmark.py  chat_session.py  edge_device.py  knowledge_document.py  user_preference.py
backend/src/rag/: __init__.py  citation_system.py  document_store.py  engine.py  response_formatter.py
backend/src/services/: device_monitor.py  status_tracker.py
docker/: docker-compose.yml
docs_copy/: 06-implementation-guidance.md
edge-kit/: Dockerfile  Dockerfile.prod  docker-entrypoint.prod.sh  docker-entrypoint.sh
edge-kit/ros2_ws/src/edge_health_interfaces/: CMakeLists.txt  package.xml
edge-kit/ros2_ws/src/edge_health_interfaces/msg/: Alert.msg  HealthStatus.msg
edge-kit/ros2_ws/src/edge_health_interfaces/srv/: SafeShutdown.srv
frontend/: .eslintcache  .eslintrc.js  Dockerfile  Dockerfile.dev  Dockerfile.prod  docusaurus.config.ts  eslint.config.js  nginx.conf  package-lock.json  package.json  sidebars.ts
hf_backup/: hf
k8s/: secrets-template.yaml
src/: __init__.py  config.py
tests/: __init__.py  conftest.py
(+300 files in other folders)
