[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "fastembed>=0.7.4",
    "openai-agents>=0.6.2",
    "pydantic>=2.12.5",
    "qdrant-client>=1.16.1",
    "pyyaml>=6.0",
    "uvicorn>=0.38.0",
    "openai>=2.9.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
    "cohere>=5.20.0",
]
